[package]
name = "pi_share"
version = "0.1.3"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "rc, arc, lock, atomic"
repository = "https://github.com/GaiaWorld/pi_share.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "share", "pi_share"]

[features]
defualt = []
rc = []